# mba-mcp

./: .gitignore  EXERCISE.md  LICENSE  README.md  pyproject.toml  server.py  server.py.bak.grades  server.py.bak.predeck
examples/: example_analysis.md
